Styled list fixes for font size, tooltips, and Show More button (#327)
* Moved show more threshold to item level

* Updated JS decoration code to work with new JSON model

* Implemented adaptive tooltip positioning

* Fixed issue where extra width could be added to the page when tooltips were focused, not hovered

* Making subtle adjusments to tooltip position when in 'bottom' mode to avoid placement off screen

* Switching px out in favour of rem

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -72,7 +72,7 @@
   color: var(--white);
 }
 
-.table.list table tbody td div {
+.table.list table tbody td div:not(.tooltip-content) {
   display: inline;
 }
 
